[gd_scene load_steps=4 format=3 uid="uid://blx1ighgeifbe"]

[ext_resource type="FontFile" uid="uid://bg4q6vydths0p" path="res://assets/MaldiniBold.ttf" id="1_754oo"]
[ext_resource type="Script" uid="uid://d1n6c8q3uqq07" path="res://scripts/menu_layer.gd" id="1_v46yp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hja3t"]
bg_color = Color(0.0862745, 0.364706, 0.294118, 1)

[node name="MenuLayer" type="CanvasLayer"]
script = ExtResource("1_v46yp")

[node name="shadow" type="Panel" parent="."]
offset_right = 1000.0
offset_bottom = 1049.0

[node name="Panel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -172.0
offset_top = 100.0
offset_right = 172.0
offset_bottom = 350.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hja3t")

[node name="ExitButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -33.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 42.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("1_754oo")
theme_override_font_sizes/font_size = 25
text = "X"
flat = true

[node name="FoodLabel" type="Label" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 50.0
offset_top = 75.0
offset_right = 197.0
offset_bottom = 125.0
theme_override_fonts/font = ExtResource("1_754oo")
theme_override_font_sizes/font_size = 25
text = "Vanishing food:"
vertical_alignment = 1

[node name="FoodButton" type="CheckButton" parent="Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -94.0
offset_top = 75.0
offset_right = -50.0
offset_bottom = 125.0
grow_horizontal = 0
flat = true

[node name="BorderLabel" type="Label" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 50.0
offset_top = 136.0
offset_right = 197.0
offset_bottom = 186.0
theme_override_fonts/font = ExtResource("1_754oo")
theme_override_font_sizes/font_size = 25
text = "Borderless:"
vertical_alignment = 1

[node name="BorderButton" type="CheckButton" parent="Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -94.0
offset_top = 135.0
offset_right = -50.0
offset_bottom = 185.0
grow_horizontal = 0
flat = true

[connection signal="pressed" from="Panel/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="toggled" from="Panel/FoodButton" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="Panel/BorderButton" to="." method="_on_border_button_toggled"]
